# RelevanceOfWords

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  test.cpp
main/project/: core.cpp
main/project/function/: converter_JSON.cpp  converter_JSON.h
main/project/function/auxiliary_resource/: index.h  inverted_index.cpp  inverted_index.h  print_JSON.cpp  print_JSON.h  search_server.cpp  search_server.h
main/project/function/auxiliary_resource/global_resource/: manager.h
program/: config.json
